--- a/visit.html
+++ b/visit.html
@@ -59,21 +59,22 @@
 
   <div class="container">
 
+    <h2><p class="text-center">Wybierz lekarza i umów się na wizytę</p></h2>
     <div class="row text-center">
-        <div class="card col-md-2 col-md-offset-2">
-          <img class="card-img-top img-fluid" src="images/internista.png" alt="Card image" style="width:100%">
-          <div class="card-img-overlay">
-            <br>
-            <h4 class="card-title">Internista</h4>
-            <a href="#" class="btn btn-primary">Zapisz się</a>
-          </div>
+      <div class="card col-md-2 col-md-offset-2">
+        <img class="card-img-top img-fluid" src="images/internista.png" alt="Card image" style="width:100%">
+        <div class="card-img-overlay">
+          <br>
+          <h4 class="card-title">Internista</h4>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</button>
         </div>
+      </div>
 
       <div class="card col-md-2 col-md-offset-1" >
         <img class="card-img-top img-fluid" src="images/profilaktyka.png" alt="Card image" style="width:100%">
         <div class="card-img-overlay">
           <h4 class="card-title">Profilaktyka i szczepienia</h4>
-          <a href="#" class="btn btn-primary">Zapisz się</a>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</button>
         </div>
       </div>
 
@@ -82,27 +83,27 @@
         <div class="card-img-overlay">
           <br>
           <h4 class="card-title">Dermatolog</h4>
-          <a href="#" class="btn btn-primary">Zapisz się</a>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</button>
         </div>
       </div>
     </div> 
 
     <div class="row text-center">
-        <div class="card col-md-2 col-md-offset-2">
-          <img class="card-img-top img-fluid" src="images/okulista.png" alt="Card image" style="width:100%">
-          <div class="card-img-overlay">
-            <br>
-            <h4 class="card-title">Okulista</h4>
-            <a href="#" class="btn btn-primary">Zapisz się</a>
-          </div>
+      <div class="card col-md-2 col-md-offset-2">
+        <img class="card-img-top img-fluid" src="images/okulista.png" alt="Card image" style="width:100%">
+        <div class="card-img-overlay">
+          <br>
+          <h4 class="card-title">Okulista</h4>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</button>
         </div>
+      </div>
 
       <div class="card col-md-2 col-md-offset-1" >
         <img class="card-img-top img-fluid" src="images/endokrynolog.png" alt="Card image" style="width:100%">
         <div class="card-img-overlay">
           <br>
           <h4 class="card-title">Endokrynolog</h4>
-          <a href="#" class="btn btn-primary">Zapisz się</a>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</button>
         </div>
       </div>
 
@@ -110,27 +111,27 @@
         <img class="card-img-top img-fluid" src="images/pozostali.png" alt="Card image" style="width:100%">
         <div class="card-img-overlay">
           <h4 class="card-title">Pozostali specjaliści</h4>
-          <a href="#" class="btn btn-primary">Zapisz się</a>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</button>
         </div>
       </div>
     </div>
 
     <div class="row text-center">
-        <div class="card col-md-2 col-md-offset-2">
-          <img class="card-img-top img-fluid" src="images/stomatolog.png" alt="Card image" style="width:100%">
-          <div class="card-img-overlay">
-            <br>
-            <h4 class="card-title">Stomatolog</h4>
-            <a href="#" class="btn btn-primary">Zapisz się</a>
-          </div>
+      <div class="card col-md-2 col-md-offset-2">
+        <img class="card-img-top img-fluid" src="images/stomatolog.png" alt="Card image" style="width:100%">
+        <div class="card-img-overlay">
+          <br>
+          <h4 class="card-title">Stomatolog</h4>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</button>
         </div>
+      </div>
 
       <div class="card col-md-2 col-md-offset-1" >
         <img class="card-img-top img-fluid" src="images/badania.png" alt="Card image" style="width:100%">
         <div class="card-img-overlay">
-          ,br>
+          <br>
           <h4 class="card-title">Badania</h4>
-          <a href="#" class="btn btn-primary">Zapisz się</a>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</button>
         </div>
       </div>
 
@@ -138,25 +139,45 @@
         <img class="card-img-top img-fluid" src="images/ortopeda.png" alt="Card image" style="width:100%">
         <div class="card-img-overlay">
           <h4 class="card-title">Ortopeda i fizjoterapeuta</h4>
-          <a href="#" class="btn btn-primary">Zapisz się</a>
+          
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</button>
         </div>
       </div>
     </div>
 
     <hr>
+    <footer class="row">
+      <div class="col-md-12">
+        <p>
+          © 2018
+        </p>
+      </div>
+    </footer>
+  </div>
+</div>
+</ul>
+<!-- Trigger the modal with a button -->
 
 
-        <footer class="row">
-            <div class="col-md-12">
-                <p>
-                    © 2018
-                </p>
-            </div>
-        </footer>
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+  <div class="modal-dialog">
 
-        </ul>
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <div class="modal-body">
+        <p>Some text in the modal.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
-  </body>
-  </html>
+  </div>
+
+</body>
+</html>
 
