--- a/visit.html
+++ b/visit.html
@@ -4,8 +4,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/datepicker.min.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/moment.js"></script>
+  <script type="text/javascript" src="js/datepicker.js"></script>
 </head>
 <body>
 
@@ -163,20 +166,73 @@
 <div class="modal fade" id="myModal" role="dialog">
   <div class="modal-dialog">
 
+
     <!-- Modal content-->
+
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Modal Header</h4>
-      </div>
-      <div class="modal-body">
-        <p>Some text in the modal.</p>
-      </div>
-      <div class="modal-footer">
+        <h4 class="modal-title">Wybierz datę i godzinę wizyty</h4>
+        <div class="modal-body">
+          <div class="row">
+            <div class='col-sm-6'>
+              <div class="form-group">
+                <div class='input-group date' id='datetimepicker1'>
+                  <input type='text' class="form-control" />
+                  <span class="input-group-addon">
+                    <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <script type="text/javascript">
+              $(function () {
+               $(document).ready(function(){
+                $("#datetimepicker1").datepicker();
+              });
+             });
+           </script>
+         </div>
+       </div>
+        <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Godzina
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><a href="#">8:00</a></li>
+      <li><a href="#">8:30</a></li>
+      <li><a href="#">9:00</a></li>
+      <li><a href="#">9:30</a></li>
+      <li><a href="#">10:00</a></li>
+      <li><a href="#">10:30</a></li>
+      <li><a href="#">11:00</a></li>
+      <li><a href="#">11:30</a></li>
+      <li><a href="#">12:00</a></li>
+      <li><a href="#">12:30</a></li>
+      <li><a href="#">13:00</a></li>
+      <li><a href="#">13:30</a></li>
+      <li><a href="#">14:00</a></li>
+      <li><a href="#">14:30</a></li>
+      <li><a href="#">15:00</a></li>
+      <li><a href="#">15:30</a></li>
+
+    </ul>
+  </div>
+       <div class="checkbox">
+          <label>
+            <input type="checkbox"> Skierowanie
+          </label>
+        </div>
+     </div>
+
+
+     <div class="modal-footer">
+      <div class="text-right">
+        <button type="submit" class="btn btn-primary">Potwierdź</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
+</div>
 
 </body>
 </html>
